--- a/frontend/styles/global.scss
+++ b/frontend/styles/global.scss
@@ -16,48 +16,27 @@ button {
   font-size: 1.5rem;
 }
 
-.container{
-  height: 100vh;
-  width:100%;
-  display: flex;
-}
-.sidebar{
-  height: 100%;
-  width: 15%;
-  border-right: var(--commonLine);
+.grid{
+  margin:auto;
 }
 
-.chat-panel{
-  height: 100%;
-  width:85%;
-  display:flex;
-  flex-direction: column;
-}
-
-.body-container{
-  width: 100%;
-  height: 75%;
-  overflow: scroll;
-  border-bottom: var(--commonLine);
-}
-
-.row{
+.roww{
   cursor: pointer;
+  display: flex;
+  align-items:center;
+  margin: auto;
+  flex-direction: row;
+  width: 100%;
 }
 
-.messages{
+.colu{
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  margin:auto;
+  width:300px;
+  height: 100px;
+  text-align: center;
+
 }
 
-.text-box{
-  height: 15%;
-  width:100%;
-}
-
-.channel-info{
-  height:10%;
-  width:100%;
-  border-bottom: var(--commonLine);
-}
