--- a/frontend/styles/global.scss
+++ b/frontend/styles/global.scss
@@ -16,15 +16,29 @@ button {
   font-size: 1.5rem;
 }
 
+input[type=text], input[type=password]{
+  font-size: 1.5rem;
+  margin: 10px;
+}
+
 .grid{
   margin:auto;
+
+}
+
+.form-container{
+  width: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .roww{
   cursor: pointer;
   display: flex;
   align-items:center;
-  margin: auto;
+  margin: 0;
   flex-direction: row;
   width: 100%;
 }
@@ -32,11 +46,24 @@ button {
 .colu{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin:auto;
-  width:300px;
-  height: 100px;
+  // align-items: center;
+  margin:0;
+  width:350px;
+  height: 150px;
   text-align: center;
   border: var(--commonLine)
+}
+.leader{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 1.3rem;
+  // border: var(--commonLine)
+}
+
+.gameHeader{
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: column;
 }
 
