--- a/frontend/styles/global.scss
+++ b/frontend/styles/global.scss
@@ -22,7 +22,10 @@ input[type=text], input[type=password]{
 }
 
 .grid{
-  margin:auto;
+  // margin:auto;
+  width: 75%;
+  display: flex;
+  flex-direction: column;
 
 }
 
@@ -53,6 +56,7 @@ input[type=text], input[type=password]{
   text-align: center;
   border: var(--commonLine)
 }
+
 .leader{
   display: flex;
   flex-direction: column;
@@ -63,6 +67,19 @@ input[type=text], input[type=password]{
 
 .gameHeader{
   font-size: 1.3rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 0;
+  // width: 95%;
+}
+
+.appContainer{
+  width:100%;
+}
+
+.sideBar{
+  width: 25%;
   display: flex;
   flex-direction: column;
 }
